[gd_scene load_steps=9 format=2]

[ext_resource path="res://Means/Scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Ball.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Map.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Hand.tscn" type="PackedScene" id=4]
[ext_resource path="res://Means/Fonts/digital-7.regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Scenes/Hud.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]

size = 60
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 60
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Game" type="Node"]

script = ExtResource( 1 )
_sections_unfolded = [ "Pause" ]
Ball = ExtResource( 2 )

[node name="Map" parent="." index="0" instance=ExtResource( 3 )]

[node name="Hand" parent="." index="1" instance=ExtResource( 4 )]

[node name="PositionHand" type="Position2D" parent="." index="2"]

position = Vector2( 403.295, 1031.7 )
_sections_unfolded = [ "Transform" ]

[node name="PositionObject" type="Position2D" parent="." index="3"]

position = Vector2( 380, 450 )
_sections_unfolded = [ "Transform" ]

[node name="TimerScore" type="Timer" parent="." index="4"]

editor/display_folded = true
process_mode = 1
wait_time = 0.01
one_shot = false
autostart = false

[node name="Score" type="Label" parent="TimerScore" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 33.0
margin_top = 42.0
margin_right = 352.0
margin_bottom = 97.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Score: 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="TimerTime" type="Timer" parent="." index="5"]

editor/display_folded = true
process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="Time" type="Label" parent="TimerTime" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 499.0
margin_top = 51.0
margin_right = 645.0
margin_bottom = 85.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "TIME: 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Hud" parent="." index="6" instance=ExtResource( 6 )]

visible = false

[connection signal="move" from="Hand" to="." method="_on_Hand_move"]

[connection signal="timeout" from="TimerScore" to="." method="_on_TimerScore_timeout"]

[connection signal="timeout" from="TimerTime" to="." method="_on_TimerTime_timeout"]

[connection signal="Reset" from="Hud" to="." method="_on_Area2D_Reset"]


